objects/IndicoEmailMessageFilter__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FilterConditionColumnName__c</fullName>
        <label>FilterConditionColumnName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilterConditionValue__c</fullName>
        <label>FilterConditionValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IndicoEmailMessageFilter</label>
</CustomObject>